# openbrain

./: .buildinfo  .dockerignore  .env.demo  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  COMMANDS.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Pipfile  README.md  ci_cd.py  cost_explorer.py  example.env  genindex.html  index.html  infra-drawio-diagram.xml  manage_ci_secrets.py  new-pre-commit-hooks.yml  objects.inv  openbrain-tuner.service  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  resources.yaml  samconfig.toml  search.html  searchindex.js  template-backup.yaml  template.yaml
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: openbrain.agents.doctree  openbrain.agents.exceptions.doctree  openbrain.agents.gpt_agent.doctree  openbrain.cli.doctree  openbrain.doctree  openbrain.exceptions.doctree  openbrain.orm.doctree  openbrain.orm.exceptions.doctree  openbrain.orm.model_agent_config.doctree  openbrain.orm.model_chat_message.doctree  openbrain.orm.model_chat_session.doctree  openbrain.orm.model_client.doctree  openbrain.orm.model_common_base.doctree  openbrain.tools.callback_handler.doctree  openbrain.tools.doctree  openbrain.tools.models.context_aware_tool.doctree  openbrain.tools.models.doctree  openbrain.tools.models.model_leadmo_appointment.doctree  openbrain.tools.models.model_leadmo_contact.doctree  openbrain.tools.obtool.doctree  openbrain.tools.protocols.doctree  openbrain.tools.tool_convert_to_from_utc.doctree  openbrain.tools.tool_do_nothing.doctree  openbrain.tools.tool_event_mesh_tester.doctree  openbrain.tools.tool_get_current_time.doctree  openbrain.tools.tool_input_and_context_tester.doctree  openbrain.tools.tool_leadmo_create_appointment.doctree  openbrain.tools.tool_leadmo_create_contact.doctree  openbrain.tools.tool_leadmo_get_contact_info_from_context.doctree  openbrain.tools.tool_leadmo_get_simple_calendar_appointment_slots.doctree  openbrain.tools.tool_leadmo_stop_conversation.doctree  openbrain.tools.tool_leadmo_update_contact.doctree  (+5 more)
.github/: .codecov.yml  FUNDING.yml  disabled-dependabot.yml  disabled_quality.yml
_autosummary/: openbrain.agents.exceptions.html  openbrain.agents.gpt_agent.html  openbrain.agents.html  openbrain.cli.html  openbrain.exceptions.html  openbrain.html  openbrain.orm.exceptions.html  openbrain.orm.html  openbrain.orm.model_agent_config.html  openbrain.orm.model_chat_message.html  openbrain.orm.model_chat_session.html  openbrain.orm.model_client.html  openbrain.orm.model_common_base.html  openbrain.tools.callback_handler.html  openbrain.tools.html  openbrain.tools.models.context_aware_tool.html  openbrain.tools.models.html  openbrain.tools.models.model_leadmo_appointment.html  openbrain.tools.models.model_leadmo_contact.html  openbrain.tools.obtool.html  openbrain.tools.protocols.html  openbrain.tools.tool_convert_to_from_utc.html  openbrain.tools.tool_do_nothing.html  openbrain.tools.tool_event_mesh_tester.html  openbrain.tools.tool_get_current_time.html  openbrain.tools.tool_input_and_context_tester.html  openbrain.tools.tool_leadmo_create_appointment.html  openbrain.tools.tool_leadmo_create_contact.html  openbrain.tools.tool_leadmo_get_contact_info_from_context.html  openbrain.tools.tool_leadmo_get_simple_calendar_appointment_slots.html  openbrain.tools.tool_leadmo_stop_conversation.html  openbrain.tools.tool_leadmo_update_contact.html  openbrain.tools.tool_lls_scrub_phone_number.html  openbrain.tools.tool_simple_calculator.html  openbrain.tools.toolbox.html  openbrain.tools.util_leadmo_tools.html  openbrain.util.html
functions/: openbrain.agents.exceptions.html  openbrain.agents.gpt_agent.html  openbrain.agents.html  openbrain.cli.html  openbrain.exceptions.html  openbrain.html  openbrain.orm.exceptions.html  openbrain.orm.html  openbrain.orm.model_agent_config.html  openbrain.orm.model_chat_message.html  openbrain.orm.model_chat_session.html  openbrain.orm.model_client.html  openbrain.orm.model_common_base.html  openbrain.tools.callback_handler.html  openbrain.tools.html  openbrain.tools.models.context_aware_tool.html  openbrain.tools.models.html  openbrain.tools.models.model_leadmo_appointment.html  openbrain.tools.models.model_leadmo_contact.html  openbrain.tools.obtool.html  openbrain.tools.protocols.html  openbrain.tools.tool_convert_to_from_utc.html  openbrain.tools.tool_do_nothing.html  openbrain.tools.tool_event_mesh_tester.html  openbrain.tools.tool_get_current_time.html  openbrain.tools.tool_input_and_context_tester.html  openbrain.tools.tool_leadmo_create_appointment.html  openbrain.tools.tool_leadmo_create_contact.html  openbrain.tools.tool_leadmo_get_contact_info_from_context.html  openbrain.tools.tool_leadmo_get_simple_calendar_appointment_slots.html  openbrain.tools.tool_leadmo_stop_conversation.html  openbrain.tools.tool_leadmo_update_contact.html  openbrain.tools.tool_lls_scrub_phone_number.html  openbrain.tools.tool_simple_calculator.html  openbrain.tools.toolbox.html  openbrain.tools.util_leadmo_tools.html  openbrain.util.html
hooks/: post-commit.py  prepare-commit-msg.py
modules/: openbrain.agents.gpt_agent.html  openbrain.agents.html  openbrain.orm.html  openbrain.orm.model_agent_config.html  openbrain.orm.model_chat_message.html  openbrain.orm.model_client.html  openbrain.orm.model_common_base.html  openbrain.tools.html  openbrain.tools.tool_convert_to_from_utc.html  openbrain.tools.tool_get_current_time.html
openbrain/: .env.example  __init__.py  app.py  cli.py  exceptions.py  gpt_agent.py  setup.py  util.py
scripts/: format  publish  test
tests/: conftest.py  generator_agent_configs.py  generator_chat_messages.py  generator_chat_sessions.py  generator_clients.py  generator_leadmo_contact.py  generator_leads.py  pytest.ini  test_10_util.py  test_20_agent.py  test_21_agent_tools.py  test_22_agent_tools_leadmo.py  test_22_lead.py  test_23_agent_config.py  test_24_chat_message.py  test_27_chat_session.py  test_28_client.py  test_40_local_api.py  test_45_remote_api.py  x_test_22_lead.py
(+209 files in other folders)
